# C-Honors-Project

./: CMakeLists.txt  File Exporter.h  budgetmanager.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: budgetmanager.h  category.h  file.h  mainwindow.h
resources/: resources.qrc
src/: budgetmanager.cpp  main.cpp  mainwindow.cpp  mosesbudgetmanager.cpp
ui/: mainwindow.ui
